tests/snapshots/config_fixtures__port_negative.snap
---
source: tests/config_fixtures.rs
expression: err.to_string()
---
TOML parse error at line 2, column 8
  |
2 | port = -1
  |        ^^
invalid value: integer `-1`, expected u16
